--- a/pages/index.css
+++ b/pages/index.css
@@ -13,3 +13,11 @@
 
 /* page =================================== */
 @import url(../blocks/page/page.css);
+
+
+/* header ================================= */
+@import url(../blocks/header/header.css);
+
+
+/* logo =================================== */
+@import url(../blocks/logo/logo.css);
