--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,10 @@
 @import url(../vendor/fonts/Inter/inter.css);
 
 
+/** link ================================== */
+@import url(../blocks/link/link.css);
+
+
 /* body =================================== */
 @import url(../blocks/body/body.css);
 
@@ -21,3 +25,27 @@
 
 /* logo =================================== */
 @import url(../blocks/logo/logo.css);
+
+
+/* line =================================== */
+@import url(../blocks/line/line.css);
+
+
+/* content ================================ */
+@import url(../blocks/content/content.css);
+
+
+/* profile ================================ */
+@import url(../blocks/profile/profile.css);
+/* __img */
+@import url(../blocks/profile/__img/profile__img.css);
+/* __info */
+@import url(../blocks/profile/__info/profile__info.css);
+/* __title */
+@import url(../blocks/profile/__title/profile__title.css);
+/* __subtitle */
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+/* __edit-btn */
+@import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
+/* __add-btn */
+@import url(../blocks/profile/__add-btn/profile__add-btn.css);
