--- a/pages/index.css
+++ b/pages/index.css
@@ -49,3 +49,25 @@
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 /* __add-btn */
 @import url(../blocks/profile/__add-btn/profile__add-btn.css);
+
+
+/* cards ============================ */
+@import url(../blocks/cards/cards.css);
+
+
+/* card =================================== */
+@import url(../blocks/card/card.css);
+/* __img */
+@import url(../blocks/card/__img/card__img.css);
+/* __footer */
+@import url(../blocks/card/__footer/card__footer.css);
+/* __text */
+@import url(../blocks/card/__text/card__text.css);
+/* __like */
+@import url(../blocks/card/__like/card__like.css);
+
+
+/* footer ================================= */
+@import url(../blocks/footer/footer.css);
+/* __cop */
+@import url(../blocks/footer/__cop/footer__cop.css);
