--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -4,20 +4,20 @@
   width: 150px;
   height: 50px;
   border: 1px solid #fff;
-  background: url(../../../images/ico/add-button.svg) no-repeat center/22px 22px;
+  background: url(../../../images/ico/add.svg) no-repeat center/22px 22px;
 }
 
 @media (max-width: 767px) {
   .profile__add-btn {
     grid-column: 1/-1;
-    margin-right: 40px;
+    margin: 0 70px 0 auto;
   }
 }
 
-@media (max-width: 424px) {
+@media (max-width: 631px) {
   .profile__add-btn {
     width: 282px;
     background-size: 16px 16px;
-    margin: 0;
+    margin: 0 auto;
   }
 }
