--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -3,7 +3,7 @@
   border: 1px solid #fff;
   width: 24px;
   height: 24px;
-  background: url(../../../images/ico/edit-button.svg) no-repeat center/10px 10px;
+  background: url(../../../images/ico/edit.svg) no-repeat center/10px 10px;
   position: absolute;
   top: 17px;
   right: 0;
