--- a/pages/index.css
+++ b/pages/index.css
@@ -84,3 +84,19 @@
 
 /* popup ================================== */
 @import url(../blocks/popup/popup.css);
+/* _opened */
+@import url(../blocks/popup/_opened/popup_opened.css);
+/* _type_profile */
+@import url(../blocks/popup/_type/popup_type_profile.css);
+/* __container */
+@import url(../blocks/popup/__container/popup__container.css);
+/* __close */
+@import url(../blocks/popup/__close/popup__close.css);
+/* __title */
+@import url(../blocks/popup/__title/popup__title.css);
+/* __user-name */
+@import url(../blocks/popup/__user-name/popup__user-name.css);
+/* __user-status */
+@import url(../blocks/popup/__user-status/popup__user-status.css);
+/* __submit */
+@import url(../blocks/popup/__submit/popup__submit.css);
