--- a/pages/index.css
+++ b/pages/index.css
@@ -48,10 +48,10 @@
 @import url(../blocks/profile/__img/profile__img.css);
 /* __info */
 @import url(../blocks/profile/__info/profile__info.css);
-/* __title */
-@import url(../blocks/profile/__title/profile__title.css);
-/* __subtitle */
-@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+/* __user-name */
+@import url(../blocks/profile/__user-name/profile__user-name.css);
+/* __user-about */
+@import url(../blocks/profile/__user-about/profile__user-about.css);
 /* __edit-btn */
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 /* __add-btn */
