--- a/blocks/card/__text/card__text.css
+++ b/blocks/card/__text/card__text.css
@@ -1,6 +1,7 @@
 .card__text {
   margin: 0;
   max-width: 190px;
+  font-size: 24px;
   font-weight: 900;
   line-height: 1.2;
   letter-spacing: 1px;
