--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,7 @@
   min-height: 120px;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media (max-width: 1023px) {
