--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,7 +6,7 @@
   height: 100%;
   min-height: 100vh;
   background: rgba(0, 0, 0, .5);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: none;
