--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -6,40 +6,22 @@
   position: absolute;
   top: -35px;
   right: -35px;
-  /* background: url(../../../images/ico/close.svg) no-repeat center/cover; */
-  background: transparent;
+  background: url(../../../images/ico/close.svg) no-repeat center/cover;
+  animation: close .2s linear;
+  transition: .4s;
 }
 
-/* кастомный крестик закрытия попап */
-.popup__close::before, .popup__close:after {
-  content: '';
-  background: #fff;
-  width: 40px;
-  height: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  animation: close .3s linear;
-  transform: translate(-50%, -50%) rotate(45deg);
-  transition: 1s;
-}
-
-.popup__close::after {
-  content: '';
-  transform: translate(-50%, -50%) rotate(-45deg);
+.popup__close:active {
+  transform: scale(0);
 }
 
 @keyframes close {
   0% {
-    transform: translate(-50%, -50%) rotate(360deg);
+    transform: scale(0);
   }
   100% {
-    transform: translate(-50%, -50%) rotate(45deg);
+    transform: scale(1);
   }
-}
-
-.popup__close:active::before, .popup__close:active::after {
-  transform: translate(-50%, -50%) rotate(360deg);
 }
 
 /* media */
@@ -48,9 +30,5 @@
     width: 20px;
     height: 20px;
     right: 0;
-  }
-  .popup__close:before, .popup__close:after {
-    width: 25px;
-    height: 3px;
   }
 }
