--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,17 +1,16 @@
 .profile__info {
-  position: relative;
-  width: 336px;
+  display: grid;
+  grid-template-columns: 1fr 24px;
+  align-items: baseline;
+  column-gap: 19px;
+  row-gap: 10px;
 }
 
 @media (max-width: 767px) {
   .profile__info {
-    width: 250px;
-  }
-}
-
-@media (max-width: 424px) {
-  .profile__info {
-    width: 200px;
     text-align: center;
+    column-gap: 10px;
+    grid-template-columns: 18px 1fr 18px;
+    margin-bottom: 6px;
   }
 }
