--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -1,6 +1,6 @@
 .profile__user-name {
-  margin: 0 0 9px 0;
-  max-width: 300px;
+  margin: 0;
+  max-width: 340px;
   font-size: 42px;
   font-weight: 500;
   line-height: 1.1;
@@ -10,14 +10,14 @@
 
 @media (max-width: 767px) {
   .profile__user-name {
-    max-width: 220px;
     font-size: 31px;
-    line-height: 1.2;
+    grid-column: 2/auto;
   }
 }
 
 @media (max-width: 424px) {
   .profile__user-name {
+    line-height: 1.2;
     font-size: 27px;
   }
 }
