--- a/blocks/card/__footer/card__footer.css
+++ b/blocks/card/__footer/card__footer.css
@@ -1,10 +1,11 @@
 .card__footer {
   box-sizing: border-box;
-  padding: 21px;
-  min-height: 80px;
+  padding: 0px 21px;
   background: #fff;
   border-radius: 0 0 10px 10px;
-  display: flex;
+  display: grid;
+  grid-template-rows: 80px;
+  grid-template-columns: 1fr 22px;
   justify-content: space-between;
   align-items: center;
   gap: 15px;
