--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,3 +1,10 @@
 .card {
-  margin: 0;
+  box-sizing: border-box;
+  padding-top: 51px;
+}
+
+@media (max-width: 1024px) {
+  .card {
+    padding-top: 38px;
+  }
 }
