--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,11 +1,16 @@
-.input {
+.popup__input {
+  box-sizing: border-box;
   outline: none;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   width: 100%;
-  padding: 0 0 13px;
+  padding-bottom: 13px;
   font-size: 14px;
-  line-height: 1.2;
+  line-height: 1;
   font-weight: 400;
   color: #000;
+}
+
+.popup__input:not(:last-of-type) {
+  margin-bottom: 30px;
 }
