--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,5 @@
 .popup__title {
-  margin: 0;
+  margin: 0 0 54px;
   color: #000;
   font-size: 24px;
   line-height: 1.2;
@@ -8,6 +8,7 @@
 
 @media (max-width: 424px) {
   .popup__title {
+    margin-bottom: 75px;
     font-size: 18px;
   }
 }
