--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,6 @@
 .profile {
   box-sizing: border-box;
-  padding: 39px 0 0;
+  padding-top: 39px;
   display: flex;
   gap: 31px;
   align-items: center;
@@ -10,6 +10,6 @@
   .profile {
     padding-top: 45px;
     flex-direction: column;
-    gap: 25px;
+    gap: 28px;
   }
 }
