--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,7 @@
 .popup__container {
   box-sizing: border-box;
-  min-width: 430px;
+  width: 100%;
+  max-width: 430px;
   padding: 35px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
