Добавить новый функционал
* Добавить лайки
* Добавить новые карточки
* Добавить просмотр фото в полный экран
* Добавить удаление карточек
* Добавить плавное появление модального окна

--- a/blocks/card/__items/card__items.css
+++ b/blocks/card/__items/card__items.css
@@ -6,11 +6,12 @@
   grid-template-columns: repeat(auto-fit, 282px);
   row-gap: 19px;
   column-gap: 17px;
-  justify-content: center;
+  justify-content: start;
 }
 
 @media (max-width: 1024px) {
   .card__items {
     column-gap: 30px;
+    justify-content: center;
   }
 }
