--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,6 +7,8 @@
   min-height: 100vh;
   margin: 0 auto;
   /* Основные настройки страницы */
+  display: flex;
+  flex-direction: column;
   color: #fff;
   background-color: #000;
   /* Настройки основго шрифта страницы */
