--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,7 +4,7 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   width: 100%;
-  padding-bottom: 13px;
+  padding: 8px 5px 10px;
   font-size: 14px;
   line-height: 1.21;
   font-weight: 400;
@@ -13,4 +13,8 @@
 
 .popup__input:not(:last-of-type) {
   margin-bottom: 30px;
+}
+
+.popup__input:focus {
+  outline: 2px solid rgba(0, 174, 255, 0.849);
 }
