--- a/pages/index.css
+++ b/pages/index.css
@@ -54,6 +54,8 @@
 @import url(../blocks/card/__items/card__items.css);
 /* __item */
 @import url(../blocks/card/__item/card__item.css);
+/* __trash */
+@import url(../blocks/card/__trash/card__trash.css);
 /* __img */
 @import url(../blocks/card/__img/card__img.css);
 /* __footer */
@@ -74,14 +76,30 @@
 
 /* popup ================================== */
 @import url(../blocks/popup/popup.css);
+/* _type_profile */
+@import url(../blocks/popup/_type/popup_type_profile.css);
+/* _type_photo */
+@import url(../blocks/popup/_type/popup_type_photo.css);
+/* _type_fullcsreen */
+@import url(../blocks/popup/_type/popup_type_fullscreen.css);
 /* _opened */
 @import url(../blocks/popup/_opened/popup_opened.css);
-/* __container */
-@import url(../blocks/popup/__container/popup__container.css);
-/* __form */
-@import url(../blocks/popup/__form/popup__form.css);
 /* __close */
 @import url(../blocks/popup/__close/popup__close.css);
+/* __container */
+@import url(../blocks/popup/__container/popup__container.css);
+/* __contaier-fullscreen */
+@import url(../blocks/popup/__container-fullscreen/popup__container-fullscreen.css);
+/* __full-img */
+@import url(../blocks/popup/__full-img/popup__full-img.css);
+/* __full-text */
+@import url(../blocks/popup/__full-text/popup__full-text.css);
+/* __form */
+@import url(../blocks/popup/__form/popup__form.css);
+/* __form_type_profile */
+@import url(../blocks/popup/__form/_type/popup__form_type_profile.css);
+/* __form_type_photo */
+@import url(../blocks/popup/__form/_type/popup__form_type_photo.css);
 /* __title */
 @import url(../blocks/popup/__title/popup__title.css);
 /* __input */
@@ -90,5 +108,9 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_user-name.css);
 /* __input_type_about-me */
 @import url(../blocks/popup/__input/_type/popup__input_type_about-me.css);
+/* __input_type_card-name */
+@import url(../blocks/popup/__input/_type/popup__input_type_card-name.css);
+/* __input_type_card-link */
+@import url(../blocks/popup/__input/_type/popup__input_type_card-link.css);
 /* __button */
 @import url(../blocks/popup/__button/popup__button.css);
