--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,9 +1,9 @@
 .popup__button {
   box-sizing: border-box;
   width: 100%;
-  margin-top: 48px;
+  margin-top: 30px;
   padding: 12px;
-  border: none;
+  border: 1px solid #000;
   border-radius: 2px;
   font-size: 18px;
   line-height: 1.22;
