--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,20 +1,22 @@
 .popup__input {
   box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 0px 0px 8px 0px;
   outline: none;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  width: 100%;
-  padding: 8px 5px 10px;
   font-size: 14px;
   line-height: 1.21;
   font-weight: 400;
   color: #000;
 }
 
-.popup__input:not(:last-of-type) {
-  margin-bottom: 30px;
+.popup__input::placeholder {
+  color: #C4C4C4;
 }
 
-.popup__input:focus {
-  outline: 2px solid rgba(0, 174, 255, 0.849);
+.popup__input:focus::placeholder {
+  opacity: 0;
+  transition: opacity .2s ease;
 }
