--- a/src/blocks/profile/__img/profile__img.css
+++ b/src/blocks/profile/__img/profile__img.css
@@ -1,8 +1,8 @@
 .profile__img {
   display: block;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
   object-fit: cover;
   object-position: center;
 }
